--- a/aero_repeatability.ipynb
+++ b/aero_repeatability.ipynb
@@ -51,34 +51,36 @@
      "text": [
       "Known headers:\n",
       "aerosonic_default\n",
-      "wrong\n",
       "test1\n",
+      "wrong\n",
       "Choose an existing header or type NO:aerosonic_default\n",
-      "{'1': 'time', '9': 'tempF', '7': 'uut_static_pressure2', '10': 'angle', '3': 'tunnel_ref_static_pressure', '0': 'date', '6': 'uut_static_pressure1', '2': 'tunnel_ref_total_pressure', '5': 'uut_total_pressure'}\n",
-      "{'1': 'time', '9': 'tempF', '7': 'uut_static_pressure2', '10': 'angle', '3': 'tunnel_ref_static_pressure', '0': 'date', '6': 'uut_static_pressure1', '2': 'tunnel_ref_total_pressure', '5': 'uut_total_pressure'}\n"
+      "{'2': 'tunnel_ref_total_pressure', '10': 'angle', '1': 'time', '5': 'uut_total_pressure', '9': 'tempF', '3': 'tunnel_ref_static_pressure', '0': 'date', '6': 'uut_static_pressure1', '7': 'uut_static_pressure2'}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/stoker/aero_analysis/aeroTesting.py:111: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "/home/stoker/aero_analysis/aeroTesting.py:112: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  df['angle'] = df['angle'].apply(self.normalize_angle)\n"
+      "  df.loc['angle'] = df['angle'].apply(self.normalize_angle)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<aeroTesting.AeroRepeatability at 0x7f1940210048>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-de69bac5b782>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mAeroRepeatability\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgolden_probe_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muut_probe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/aero_analysis/aeroTesting.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, golden_probe_path, uut_probe_path)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mAeroRepeatability\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgolden_probe_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muut_probe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgolden_probe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mProbe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgolden_probe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgolden_probe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolDict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muut_probe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mProbe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muut_probe_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mknownColumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgolden_probe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolDict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/aero_analysis/aeroTesting.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path, knownColumns)\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'python'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskiprows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel_columns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mknownColumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mknownColumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_cp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/aero_analysis/aeroTesting.py\u001b[0m in \u001b[0;36mget_cp\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[0;31m# take tunnel_ref_total_pressure, uut_total_pressure (unit under test), take average of each,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0;31m# take difference to find offset to apply to all other uut_total_pressure data (for all angles)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m         \u001b[0moffset_total_pressure\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tunnel_ref_total_pressure'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmean_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Drift Data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mmean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'uut_total_pressure'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmean_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Drift Data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    120\u001b[0m         \u001b[0mmean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'uut_total_pressure'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmean_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'uut_total_pressure'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0moffset_total_pressure\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0;31m# compare both static pressures to the tunnel_ref_static_pressure and do the same as above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+     ]
     }
    ],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -97,23 +99,23 @@
      "output_type": "stream",
      "text": [
       "Known headers:\n",
+      "aerosonic_default\n",
       "wrong\n",
       "test1\n",
-      "aerosonic_default\n",
       "Choose an existing header or type NO:aerosonic_default\n",
-      "{'0': 'date', '1': 'time', '6': 'uut_static_pressure1', '2': 'tunnel_ref_total_pressure', '5': 'uut_total_pressure', '7': 'uut_static_pressure2', '10': 'angle', '3': 'tunnel_ref_static_pressure', '9': 'tempF'}\n"
+      "{'0': 'date', '1': 'time', '5': 'uut_total_pressure', '10': 'angle', '9': 'tempF', '2': 'tunnel_ref_total_pressure', '3': 'tunnel_ref_static_pressure', '6': 'uut_static_pressure1', '7': 'uut_static_pressure2'}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/stoker/aero_analysis/aeroTesting.py:111: SettingWithCopyWarning: \n",
+      "/usr/local/lib/python3.5/dist-packages/pandas/core/indexing.py:517: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  df['angle'] = df['angle'].apply(self.normalize_angle)\n"
+      "  self.obj[item] = s\n"
      ]
     }
    ],
@@ -170,263 +172,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import seaborn\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import date\n",
-    "import ntpath\n",
-    "#def compare_cp_plot(self, col, origin_bounds = 0.005):\n",
-    "#    #TODO\n",
-    "#    return\n",
-    "origin_bounds = 0.005"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col = 'cp_total_pressure'\n",
-    "filename = uut_probe.data_path\n",
-    "if 'total' in col:\n",
-    "    generated_title = 'Total Pressure'\n",
-    "    filename = filename + '-total-'\n",
-    "elif 'static' in col and '1' in col:\n",
-    "    generated_title = 'Static Pressure 1'\n",
-    "    filename = filename + '-static1-'\n",
-    "elif 'static' in col and '2' in col:\n",
-    "    generated_title = 'Static Pressure 2'\n",
-    "    filename = filename + '-static2-'\n",
-    "else:\n",
-    "    generated_title = ''\n",
-    "filename = filename + '-' + str(date.today()) + '.png'\n",
-    "# check if passed or failed\n",
-    "difference = uut_probe.cp[col]-golden_probe.cp[col]\n",
-    "difference.drop(labels='Drift Data', inplace=True)\n",
-    "pos_mask = difference.index.to_series() >= 0\n",
-    "neg_mask = difference.index.to_series() < 0\n",
-    "upper_bound = pd.concat([origin_bounds + difference.index.to_series()[pos_mask]*0.0005, origin_bounds - difference.index.to_series()[neg_mask]*0.0005])\n",
-    "upper_bound.sort_index()\n",
-    "lower_bound = pd.concat([-origin_bounds - difference.index.to_series()[pos_mask]*0.0005, -origin_bounds + difference.index.to_series()[neg_mask]*0.0005])\n",
-    "\n",
-    "\n",
-    "\n",
-    "if any(upper_bound - difference < 0):\n",
-    "    passFail = 'FAIL'\n",
-    "elif any(difference - lower_bound < 0):\n",
-    "    passFail = 'FAIL'\n",
-    "else:\n",
-    "    passFail = 'PASS'\n",
-    "\n",
-    "neg_mask = difference.index.to_series() <= 0\n",
-    "plt.figure(figsize=(8, 6), dpi=80)\n",
-    "plt.scatter(difference.index, difference, color='blue')\n",
-    "\n",
-    "#plt.plot(upper_bound.index, upper_bound, linestyle='dashed', color='red')\n",
-    "plt.plot(difference.index[pos_mask], origin_bounds + difference.index.to_series()[pos_mask]*0.0005, linestyle='dashed', color='red')\n",
-    "plt.plot(difference.index[pos_mask], -origin_bounds - difference.index.to_series()[pos_mask]*0.0005, linestyle='dashed', color='red')\n",
-    "plt.plot(difference.index[neg_mask], origin_bounds - difference.index.to_series()[neg_mask]*0.0005, linestyle='dashed', color='red')\n",
-    "plt.plot(difference.index[neg_mask], -origin_bounds + difference.index.to_series()[neg_mask]*0.0005, linestyle='dashed', color='red')\n",
-    "plt.xlabel('AOA (deg)')\n",
-    "plt.ylabel('$\\Delta$P / $q_c$')\n",
-    "plt.title(generated_title + '\\n ' + passFail)\n",
-    "\n",
-    "#plt.show()\n",
-    "plt.savefig(filename)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>angle</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>-20</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-18</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-16</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-14</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-12</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-10</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-8</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-6</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-4</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>-2</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>P</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       0\n",
-       "angle   \n",
-       "-20    F\n",
-       "-18    F\n",
-       "-16    F\n",
-       "-14    F\n",
-       "-12    F\n",
-       "-10    F\n",
-       "-8     F\n",
-       "-6     F\n",
-       "-4     F\n",
-       "-2     F\n",
-       " 0     F\n",
-       " 2     P\n",
-       " 4     P\n",
-       " 6     P\n",
-       " 8     P\n",
-       " 10    F\n",
-       " 12    P\n",
-       " 14    F\n",
-       " 16    F\n",
-       " 18    F\n",
-       " 20    F"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pf_bool = (upper_bound - difference < 0) | (difference - lower_bound < 0)# true if out of bounds\n",
-    "pf = pd.DataFrame(['P']*len(pf_bool.index), index = pf_bool.index)\n",
-    "pf[pf_bool] = 'F'\n",
-    "pf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = os.path.join(golden_probe.data_path.split('/')[:-1])\n",
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.path.pathsep#(golden_probe.data_path)"
+    "import ntpath\n"
    ]
   },
   {
